[gd_scene load_steps=13 format=4 uid="uid://dgdqtydil5rj8"]

[ext_resource type="Script" path="res://game_scene.gd" id="1_0marj"]
[ext_resource type="Texture2D" uid="uid://d4hnr3kdyyf5g" path="res://background/terrainTiles_retina.png" id="2_vthtk"]
[ext_resource type="PackedScene" uid="uid://ctjnx6oo5ch47" path="res://objects/unit_base/unit_base.tscn" id="3_itl1k"]
[ext_resource type="Texture2D" uid="uid://dct624iyu1ob6" path="res://icons/IconGodotNode/node/canon.png" id="4_bncqw"]
[ext_resource type="PackedScene" uid="uid://7m54yhh1iwlb" path="res://objects/bubble_spawner/bubble_spawner.tscn" id="5_bytp8"]
[ext_resource type="PackedScene" uid="uid://ukm7x4tnv1xr" path="res://hud/hud.tscn" id="6_kbtma"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rmyoh"]
texture = ExtResource("2_vthtk")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSet" id="TileSet_m3rmy"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_rmyoh")

[sub_resource type="Animation" id="Animation_gujgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerUpIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gxh3r"]
resource_name = "power_up_activated"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerUpIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 0, 0), Color(1, 1, 0, 0.921569), Color(1, 1, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2j1s"]
_data = {
"RESET": SubResource("Animation_gujgg"),
"power_up_activated": SubResource("Animation_gxh3r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5c7yc"]
size = Vector2(661, 404)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0marj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="Background" type="TileMapLayer" parent="."]
modulate = Color(0.497474, 0.497474, 0.497474, 1)
position = Vector2(2, 31)
tile_map_data = PackedByteArray("AAAFAAMAAAAAAAEAAAAGAAMAAAAHAAAAAAAHAAMAAAAAAAIAAAAHAAQAAAACAAIAAAAIAAMAAAAIAAAAAAAIAAIAAAAIAAAAAAAGAAIAAAAHAAAAAAAHAAIAAAAAAAIAAAAJAAIAAAAAAAAAAAAGAAQAAAAHAAIAAAAIAAQAAAAIAAIAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAHAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAHAAEAAAAAAAMAAAAIAAEAAAAIAAAAAAAIAAAAAAAIAAAAAAAHAAAAAAAAAAIAAAAEAAMAAAAAAAAAAAADAAQAAAACAAAAAAAJAAEAAAAAAAEAAAAKAAEAAAAAAAEAAAAFAAQAAAACAAAAAAAEAAQAAAACAAAAAAADAAUAAAAAAAEAAAACAAUAAAAAAAAAAAAGAAAAAAAHAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAEAAAANAAEAAAAAAAEAAAAMAAEAAAAAAAEAAAALAAEAAAAAAAEAAAAMAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAALAAMAAAAAAAEAAAAKAAMAAAAAAAEAAAAJAAMAAAAAAAEAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAACAAAAAAAJAAQAAAACAAAAAAAKAAQAAAACAAAAAAALAAQAAAACAAAAAAAMAAQAAAACAAAAAAAMAAMAAAAAAAEAAAANAAMAAAAAAAEAAAANAAQAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAMAAAAAAAEAAAAOAAUAAAAAAAEAAAANAAUAAAAAAAEAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAAEAAUAAAAAAAEAAAAFAAUAAAAAAAEAAAAGAAUAAAAHAAAAAAAIAAUAAAAIAAAAAAAJAAUAAAAAAAEAAAAKAAUAAAAAAAEAAAALAAUAAAAAAAEAAAAMAAUAAAAAAAEAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAHAAAAAAAIAAYAAAAIAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAEAAAAOAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAcAAAAAAAEAAAALAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAIAAgAAAAIAAAAAAAGAAgAAAAHAAAAAAAFAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAADAAgAAAAAAAAAAAACAAgAAAAAAAAAAAABAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAcAAAAHAAAAAAAIAAcAAAAIAAAAAAAJAAcAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAcAAAAAAAEAAAANAAcAAAAAAAEAAAAHAAUAAAAAAAIAAAAHAAYAAAAAAAMAAAAHAAcAAAAAAAIAAAAHAAgAAAAAAAMAAAAFAP//AAAAAAAAAAAEAP//AAAAAAAAAAADAP//AAAAAAAAAAACAP//AAAAAAAAAAABAP//AAAAAAAAAAAAAP//AAAAAAAAAAAIAP//AAAIAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAGAP//AAAHAAAAAAAHAP//AAAAAAIAAAA=")
tile_set = SubResource("TileSet_m3rmy")

[node name="PlayerBases" type="Node2D" parent="."]

[node name="PlayerLeftBase" parent="PlayerBases" instance=ExtResource("3_itl1k")]
position = Vector2(182, 608)

[node name="PlayerRightBase" parent="PlayerBases" instance=ExtResource("3_itl1k")]
position = Vector2(1725, 610)

[node name="BulletManager" type="Node2D" parent="."]

[node name="PowerUpOverlay" type="Node2D" parent="."]

[node name="PowerUpIcon" type="Sprite2D" parent="PowerUpOverlay"]
modulate = Color(1, 1, 0, 0)
texture_filter = 1
position = Vector2(951, 561)
scale = Vector2(52.125, 52.125)
texture = ExtResource("4_bncqw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PowerUpOverlay"]
libraries = {
"": SubResource("AnimationLibrary_w2j1s")
}
autoplay = "RESET"

[node name="BubbleSpawners" type="Node2D" parent="."]

[node name="BubbleSpawner" parent="BubbleSpawners" instance=ExtResource("5_bytp8")]
position = Vector2(852, 540)

[node name="Area2D" type="Area2D" parent="BubbleSpawners/BubbleSpawner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BubbleSpawners/BubbleSpawner/Area2D"]
position = Vector2(-519, -211)
shape = SubResource("RectangleShape2D_5c7yc")

[node name="Target1" type="Marker2D" parent="BubbleSpawners/BubbleSpawner/Area2D"]
position = Vector2(1067, 540)

[node name="Target2" type="Marker2D" parent="BubbleSpawners/BubbleSpawner/Area2D"]
position = Vector2(1068, -212)

[node name="Target3" type="Marker2D" parent="BubbleSpawners/BubbleSpawner/Area2D"]
position = Vector2(-508, 548)

[node name="BubbleSpawner2" parent="BubbleSpawners" instance=ExtResource("5_bytp8")]
position = Vector2(2107, 540)

[node name="Area2D" type="Area2D" parent="BubbleSpawners/BubbleSpawner2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BubbleSpawners/BubbleSpawner2/Area2D"]
position = Vector2(-519, -213)
shape = SubResource("RectangleShape2D_5c7yc")

[node name="Target1" type="Marker2D" parent="BubbleSpawners/BubbleSpawner2/Area2D"]
position = Vector2(-2106, 540)

[node name="Target2" type="Marker2D" parent="BubbleSpawners/BubbleSpawner2/Area2D"]
position = Vector2(-2099, -212)

[node name="Target3" type="Marker2D" parent="BubbleSpawners/BubbleSpawner2/Area2D"]
position = Vector2(-539, 548)

[node name="BubbleSpawner3" parent="BubbleSpawners" instance=ExtResource("5_bytp8")]
position = Vector2(852, 1210)

[node name="Area2D" type="Area2D" parent="BubbleSpawners/BubbleSpawner3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BubbleSpawners/BubbleSpawner3/Area2D"]
position = Vector2(-521.5, -334)
shape = SubResource("RectangleShape2D_5c7yc")

[node name="Target1" type="Marker2D" parent="BubbleSpawners/BubbleSpawner3/Area2D"]
position = Vector2(1067, -1086)

[node name="Target2" type="Marker2D" parent="BubbleSpawners/BubbleSpawner3/Area2D"]
position = Vector2(-492, -1082)

[node name="Target3" type="Marker2D" parent="BubbleSpawners/BubbleSpawner3/Area2D"]
position = Vector2(1060, -346)

[node name="BubbleSpawner4" parent="BubbleSpawners" instance=ExtResource("5_bytp8")]
position = Vector2(2107, 1210)

[node name="Area2D" type="Area2D" parent="BubbleSpawners/BubbleSpawner4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BubbleSpawners/BubbleSpawner4/Area2D"]
position = Vector2(-521.5, -334)
shape = SubResource("RectangleShape2D_5c7yc")

[node name="Target1" type="Marker2D" parent="BubbleSpawners/BubbleSpawner4/Area2D"]
position = Vector2(-2106, -1086)

[node name="Target2" type="Marker2D" parent="BubbleSpawners/BubbleSpawner4/Area2D"]
position = Vector2(-2099, -322)

[node name="Target3" type="Marker2D" parent="BubbleSpawners/BubbleSpawner4/Area2D"]
position = Vector2(-523, -1074)

[node name="HUDCanvasGroup" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDCanvasGroup" instance=ExtResource("6_kbtma")]
